Adding request header Parser

--- a/views/index.html
+++ b/views/index.html
@@ -13,7 +13,7 @@
     <div class="container">
       <ul class="api-list">
         <li><a href="Timestamp">Timestamp Microservice</a></li>
-        <li></li>
+        <li><a href="/whoami">request header Parser</a></li>
       </ul>
     </div>
     <div class="footer">
