--- a/views/Timestamp.html
+++ b/views/Timestamp.html
@@ -4,7 +4,7 @@
    <head>
       <title>Timestamp Microservice</title>
       <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
-      <link href="style.css" rel="stylesheet" type="text/css">
+      <link href="timestamp.css" rel="stylesheet" type="text/css">
    </head>
 
    <body>
