Add URL Shortener Microservice

--- a/views/index.html
+++ b/views/index.html
@@ -1,25 +1,29 @@
 <!DOCTYPE html>
 
 <html>
-   <head>
-      <title>abdelghany's simple Portfolio App </title>
-      <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
-      <link href="style.css" rel="stylesheet" type="text/css">
-   </head>
 
-   <body>
-    <h1>abdelghany simple Portfolio App</h1>
-    <hr />
-    <div class="container">
-      <ul class="api-list">
-        <li><a href="Timestamp">Timestamp Microservice</a></li>
-        <li><a href="/whoami">request header Parser</a></li>
-      </ul>
-    </div>
-    <div class="footer">
-      <p>
-        By <a href="https://twitter.com/mahammedi_dz">Mahammedi ABdelghani</a>
-      </p>
-    </div>
-  </body>
+<head>
+  <title>abdelghany's simple Portfolio App </title>
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
+  <link href="style.css" rel="stylesheet" type="text/css">
+</head>
+
+<body>
+  <h1>abdelghany simple Portfolio App</h1>
+  <hr />
+  <div class="container">
+    <ul class="api-list">
+      <li><a href="Timestamp">Timestamp Microservice</a></li>
+      <li><a href="/whoami">request header Parser</a></li>
+      <li><a href="/urlshortener">URL Shortener Microservice</a></li>
+
+    </ul>
+  </div>
+  <div class="footer">
+    <p>
+      By <a href="https://twitter.com/mahammedi_dz">Mahammedi ABdelghani</a>
+    </p>
+  </div>
+</body>
+
 </html>
