Add Exercise tracker API

--- a/views/index.html
+++ b/views/index.html
@@ -9,13 +9,14 @@
 </head>
 
 <body>
-  <h1>abdelghany simple Portfolio App</h1>
+  <h1>abdelghany's simple Portfolio App</h1>
   <hr />
   <div class="container">
     <ul class="api-list">
       <li><a href="Timestamp">Timestamp Microservice</a></li>
       <li><a href="/whoami">request header Parser</a></li>
       <li><a href="/urlshortener">URL Shortener Microservice</a></li>
+      <li><a href="/exercisetracker">Exercise Tracker API </a></li>
 
     </ul>
   </div>
