Add File Metadata Microservice

--- a/views/exercisetracker.html
+++ b/views/exercisetracker.html
@@ -61,7 +61,8 @@
           </h3>
         </li>
         <li>
-          <h3><a href="/api/users/60ec69139b16631668556442/logs">Retrieve a <code>part</code> of the log of any user</a>
+          <h3><a href="/api/users/60ec69139b16631668556442/logs?limit=5?from=1990-01-01">Retrieve a <code>part</code> of
+              the log of any user</a>
           </h3>
           <ul>
             <li> <code>GET /api/users/:_id/logs?[&amp;from][&amp;to][&amp;limit]</code> </li>
@@ -90,6 +91,11 @@
 
   </script>
   <!-- end script -->
+  <div class="footer">
+    <p>
+      By <a href="https://twitter.com/mahammedi_dz">Mahammedi ABdelghani</a>
+    </p>
+  </div>
 </body>
 
 </html>
