--- a/views/index.html
+++ b/views/index.html
@@ -14,9 +14,11 @@
   <div class="container">
     <ul class="api-list">
       <li><a href="Timestamp">Timestamp Microservice</a></li>
-      <li><a href="/whoami">request header Parser</a></li>
+      <li><a href="/whoami">request header Parser Microservice</a></li>
       <li><a href="/urlshortener">URL Shortener Microservice</a></li>
       <li><a href="/exercisetracker">Exercise Tracker API </a></li>
+      <li><a href="/filemetadata"> File Metadata Microservice </a></li>
+
 
     </ul>
   </div>
